# okclai

./: Cargo.toml  Readme.md  flake.nix
.github/workflows/: main.yml
src/: lib.rs  main.rs  openai.rs
