[package]
name = "which_command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
structopt = { version = "0.3" }
anyhow = { version = "1.0" }
tokio = { version = "1.26", features = ["macros"] }
eventsource-client = { version = "0.11"}
futures-util = { version = "0.3" }
futures = { version = "0.3" }
regex = { version = "1.7" }
